Created two <divs> inside div class="video-preview", to create to block/vertical containers.

--- a/youtube.html
+++ b/youtube.html
@@ -63,11 +63,14 @@
     </div>
 
     <div class="video-preview">
-        <img class="thumbnail"
+        <div>
+            <img class="thumbnail"
         src="images/thumbnail-2.webp"
         alt="thumbnail-image"
         />
-        <img class="channel-image"
+        </div>
+        <div>
+            <img class="channel-image"
         src="channel-pictures/channel-2.jpeg"
         alt="channel-image">
         <p class="video-title">
@@ -75,6 +78,7 @@
         </p>
         <p class="video-author">Markipiler</p>
         <p class="video-stats">19M views &#183; 4 years ago</p>
+        </div>
     </div>
   </body>
 </html>
