Fixed error in line 58. Body element was present in between div.

--- a/youtube.html
+++ b/youtube.html
@@ -11,74 +11,76 @@
     <link rel="stylesheet" href="youtube.css" />
 
     <style>
-    .search-bar {
-            color: rgb(245, 245, 245);
-            font-size: 16px;
-            padding-left: 10px;
-            padding-top: 6px;
-            padding-bottom: 6px;
-            border-width: 1px;
-            border-style: solid;
-            border-color: rgb(211, 211, 211);
-            border-radius: 2px;
-            box-shadow: inset 1px 1px 4px 1px rgb(239, 239, 239);
-            display: block;
-            }
+      .search-bar {
+        color: rgb(245, 245, 245);
+        font-size: 16px;
+        padding-left: 10px;
+        padding-top: 6px;
+        padding-bottom: 6px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(211, 211, 211);
+        border-radius: 2px;
+        box-shadow: inset 1px 1px 4px 1px rgb(239, 239, 239);
+        display: block;
+      }
 
-        .thumbnail {
-            width: 300px;
-        }
+      .thumbnail {
+        width: 300px;
+      }
 
-        .video-title {
-            width: 300px;
-        }
+      .video-title {
+        width: 300px;
+      }
 
-        .video-preview {
-            display: inline-block;
-            width: 300px;
-            background-color: azure;
-            vertical-align: top;
-            margin-right: 15px;
-        }
+      .video-preview {
+        display: inline-block;
+        width: 300px;
+        background-color: azure;
+        vertical-align: top;
+        margin-right: 15px;
+      }
     </style>
-
   </head>
   <body>
-    <input  class="search-bar" type="text" placeholder="Search">
-    
+    <input class="search-bar" type="text" placeholder="Search" />
+
     <div class="video-preview">
-        <img class="thumbnail"
+      <img
+        class="thumbnail"
         src="images/thumbnail-1.webp"
         alt="thumbnail-image"
-        />
-        <img class="channel-image"
+      />
+      <img
+        class="channel-image"
         src="channel-pictures/channel-1.jpeg"
         alt="channel-image"
-        /></body>
-        <p class="video-title">
-            Talking Tech and AI with Google CEO Sundar Pichai!
-        </p>
-        <p class="video-author">Marques Brownlee</p>
-        <p class="video-stats">3.4M views &#183; 6 months ago</p>
+      />
+      <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+      </p>
+      <p class="video-author">Marques Brownlee</p>
+      <p class="video-stats">3.4M views &#183; 6 months ago</p>
     </div>
 
     <div class="video-preview">
-        <div>
-            <img class="thumbnail"
-        src="images/thumbnail-2.webp"
-        alt="thumbnail-image"
+      <div>
+        <img
+          class="thumbnail"
+          src="images/thumbnail-2.webp"
+          alt="thumbnail-image"
         />
-        </div>
-        <div>
-            <img class="channel-image"
-        src="channel-pictures/channel-2.jpeg"
-        alt="channel-image">
-        <p class="video-title">
-            Try Not To Laugh Challenge #9
-        </p>
+      </div>
+      <div>
+        <img
+          class="channel-image"
+          src="channel-pictures/channel-2.jpeg"
+          alt="channel-image"
+        />
+        <p class="video-title">Try Not To Laugh Challenge #9</p>
         <p class="video-author">Markipiler</p>
         <p class="video-stats">19M views &#183; 4 years ago</p>
-        </div>
+      </div>
     </div>
   </body>
 </html>
