--- a/youtube.html
+++ b/youtube.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="youtube.css" />
@@ -25,8 +25,14 @@
         display: block;
       }
 
+      p {
+        font-family: Roboto, Arial;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
       .thumbnail {
-        width: 300px;
+        width: 350px;
       }
 
       .video-title {
@@ -35,8 +41,7 @@
 
       .video-preview {
         display: inline-block;
-        width: 300px;
-        background-color: azure;
+        width: 350px;
         vertical-align: top;
         margin-right: 15px;
       }
@@ -56,13 +61,35 @@
         display: inline-block;
         width: 200px;
       }
+
+      .thumbnail-row {
+        margin-bottom: 8px;
+      }
+
+      .video-title {
+        font-weight: 500;
+        font-size: 15px;
+        width: 280px;
+        line-height: 20px;
+        margin-bottom: 12px;
+      }
+
+      .video-author,
+      .video-stats {
+        color: #606060;
+        font-size: 13px;
+      }
+
+      .video-author {
+        margin-bottom: 6px;
+      }
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search" />
 
     <div class="video-preview">
-      <div>
+      <div class="thumbnail-row">
         <img
           class="thumbnail"
           src="images/thumbnail-1.webp"
@@ -88,7 +115,7 @@
     </div>
 
     <div class="video-preview">
-      <div>
+      <div class="thumbnail-row">
         <img
           class="thumbnail"
           src="images/thumbnail-2.webp"
@@ -98,12 +125,12 @@
       <div>
         <div class="channel-picture">
           <img
-            class="channel-image"
+            class="profile-picture"
             src="channel-pictures/channel-2.jpeg"
             alt="channel-image"
           />
         </div>
-        <div>
+        <div class="video-info">
           <p class="video-title">Try Not To Laugh Challenge #9</p>
           <p class="video-author">Markipiler</p>
           <p class="video-stats">19M views &#183; 4 years ago</p>
