--- a/youtube.html
+++ b/youtube.html
@@ -8,79 +8,33 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="youtube.css" />
-
-    <style>
-      .search-bar {
-        color: rgb(245, 245, 245);
-        font-size: 16px;
-        padding-left: 10px;
-        padding-top: 6px;
-        padding-bottom: 6px;
-        border-width: 1px;
-        border-style: solid;
-        border-color: rgb(211, 211, 211);
-        border-radius: 2px;
-        box-shadow: inset 1px 1px 4px 1px rgb(239, 239, 239);
-        display: block;
-      }
-
-      p {
-        font-family: Roboto, Arial;
-        margin-top: 0;
-        margin-bottom: 0;
-      }
-
-      .video-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        column-gap: 16px;
-        row-gap: 40px;
-      }
-
-      .thumbnail {
-        width: 100%;
-      }
-
-      .video-title {
-        margin: 0;
-      }
-
-      .video-info-grid {
-        display: grid;
-        grid-template-columns: 50px 1fr;
-      }
-
-      .profile-picture {
-        width: 40px;
-        border-radius: 50px;
-      }
-
-      .thumbnail-row {
-        margin-bottom: 8px;
-      }
-
-      .video-title {
-        font-weight: 500;
-        font-size: 15px;
-        width: 280px;
-        line-height: 20px;
-        margin-bottom: 12px;
-      }
-
-      .video-author,
-      .video-stats {
-        color: #606060;
-        font-size: 13px;
-      }
-
-      .video-author {
-        margin-bottom: 6px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/video.css" />
+    <link rel="stylesheet" href="styles/general.css" />
   </head>
   <body>
-    <input class="search-bar" type="text" placeholder="Search" />
+    <div class="header">
+      <div class="left-section">
+        <div>
+          <img
+            class="hambuger-icon"
+            src="header-images/hamburger-menu.svg"
+            alt="/"
+          />
+          <img
+            class="youtube-logo"
+            src="header-images/youtube-logo.svg"
+            alt="/"
+          />
+        </div>
+      </div>
+      <div class="middle-section">
+        <input class="search-bar" type="text" placeholder="Search" />
+      </div>
+      <div class="right-section">
+        <p>icon</p>
+      </div>
+    </div>
 
     <div class="video-grid">
       <div class="video-preview">
