Used Flexbox to evenly spread out content in header section. Removed margins from body to be able to adjust contect position specifically. Fixed some font errors on lines 18-19 of youtbe.html.

--- a/youtube.html
+++ b/youtube.html
@@ -16,23 +16,14 @@
     <div class="header">
       <div class="left-section">
         <div>
-          <img
-            class="hambuger-icon"
-            src="header-images/hamburger-menu.svg"
-            alt="/"
-          />
-          <img
-            class="youtube-logo"
-            src="header-images/youtube-logo.svg"
-            alt="/"
-          />
+          <p>left section</p>
         </div>
       </div>
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search" />
       </div>
       <div class="right-section">
-        <p>icon</p>
+        <p>right section</p>
       </div>
     </div>
 
