--- a/youtube.html
+++ b/youtube.html
@@ -16,14 +16,28 @@
     <div class="header">
       <div class="left-section">
         <div>
-          <p>left section</p>
+          <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="/" />
+          <img class="youtube-logo" src="icons/youtube-logo.svg" />
         </div>
       </div>
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search" />
+        <img class="search-icon" src="icons/search.svg" alt="/" />
+        <img
+          class="voice-search-icon"
+          src="icons/voice-search-icon.svg"
+          alt="/"
+        />
       </div>
       <div class="right-section">
-        <p>right section</p>
+        <img class="upload-icon" src="icons/upload.svg" />
+        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="/" />
+        <img class="notifications-icon" src="icons/notifications.svg" alt="/" />
+        <img
+          class="my-channel-picture"
+          src="channel-pictures/my-channel.jpeg"
+          alt="1"
+        />
       </div>
     </div>
 
