--- a/youtube.html
+++ b/youtube.html
@@ -22,12 +22,16 @@
       </div>
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search" />
-        <img class="search-icon" src="icons/search.svg" alt="/" />
-        <img
-          class="voice-search-icon"
-          src="icons/voice-search-icon.svg"
-          alt="/"
-        />
+        <button class="search-button">
+          <img class="search-icon" src="icons/search.svg" alt="/" />
+        </button>
+        <button class="voice-search-button">
+          <img
+            class="voice-search-icon"
+            src="icons/voice-search-icon.svg"
+            alt="/"
+          />
+        </button>
       </div>
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg" />
