Border Radius was not working properly for me.
Used Chrome Dev tools to look at example on how to
combine search bar and search button.

Created a Search Bar container for the search bar
and search button and properly adjusted border
radius by each corner.

--- a/youtube.html
+++ b/youtube.html
@@ -21,10 +21,12 @@
         </div>
       </div>
       <div class="middle-section">
-        <input class="search-bar" type="text" placeholder="Search" />
-        <button class="search-button">
-          <img class="search-icon" src="icons/search.svg" alt="/" />
-        </button>
+        <div class="search-bar-container">
+          <input class="search-bar" type="text" placeholder="Search" />
+          <button class="search-button">
+            <img class="search-icon" src="icons/search.svg" alt="/" />
+          </button>
+        </div>
         <button class="voice-search-button">
           <img
             class="voice-search-icon"
