Practiced Fixed Position
Created side bar to youtube clone.
Used flex box to adjust the icon and text under
icon.
Adjusted body padding to be able to scroll and see
all of the content without hiding behind header/
sidebar.

--- a/youtube.html
+++ b/youtube.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Youtube Channel Mockup</title>
+    <title>Youtube.com Clone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/video.css" />
     <link rel="stylesheet" href="styles/general.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
   </head>
   <body>
     <div class="header">
@@ -44,6 +45,32 @@
           src="channel-pictures/my-channel.jpeg"
           alt="1"
         />
+      </div>
+    </div>
+    <div class="sidebar">
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/home.svg" />
+        <p class="sidebar-title">Home</p>
+      </div>
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/explore.svg" />
+        <p class="sidebar-title">Explore</p>
+      </div>
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/subscriptions.svg" />
+        <p class="sidebar-title">Subscriptions</p>
+      </div>
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/originals.svg" />
+        <p class="sidebar-title">Originals</p>
+      </div>
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/youtube-music.svg" />
+        <p class="sidebar-title">YouTube Music</p>
+      </div>
+      <div class="sidebar-container">
+        <img class="sidebar-icon" src="icons/library.svg" />
+        <p class="sidebar-title">Library</p>
       </div>
     </div>
 
