--- a/youtube.html
+++ b/youtube.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/sidebar.css" />
   </head>
   <body>
+    <!--Header Section w/ icons, logo, search bar, and profile channel picture-->
     <div class="header">
       <div class="left-section">
         <div>
@@ -26,6 +27,7 @@
           <input class="search-bar" type="text" placeholder="Search" />
           <button class="search-button">
             <img class="search-icon" src="icons/search.svg" alt="/" />
+            <div class="tooltip">Search</div>
           </button>
         </div>
         <button class="voice-search-button">
@@ -34,46 +36,66 @@
             src="icons/voice-search-icon.svg"
             alt="/"
           />
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
       <div class="right-section">
-        <img class="upload-icon" src="icons/upload.svg" />
-        <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="/" />
-        <img class="notifications-icon" src="icons/notifications.svg" alt="/" />
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="icons/upload.svg" />
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="youtube-apps-icon-container">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="/" />
+          <div class="tooltip">YouTube Apps</div>
+        </div>
+
+        <div class="notifications-icon-container">
+          <img
+            class="notifications-icon"
+            src="icons/notifications.svg"
+            alt="/"
+          />
+          <div class="notifications-count">3</div>
+          <div class="tooltip">Notifications</div>
+        </div>
         <img
-          class="my-channel-picture"
+          class="current-user-picture"
           src="channel-pictures/my-channel.jpeg"
           alt="1"
         />
       </div>
     </div>
+
+    <!--Sidebar w/ icons-->
     <div class="sidebar">
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/home.svg" />
-        <p class="sidebar-title">Home</p>
+      <div class="sidebar-link">
+        <img src="icons/home.svg" />
+        <p>Home</p>
       </div>
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/explore.svg" />
-        <p class="sidebar-title">Explore</p>
+      <div class="sidebar-link">
+        <img src="icons/explore.svg" />
+        <p>Explore</p>
       </div>
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/subscriptions.svg" />
-        <p class="sidebar-title">Subscriptions</p>
+      <div class="sidebar-link">
+        <img src="icons/subscriptions.svg" />
+        <p>Subscriptions</p>
       </div>
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/originals.svg" />
-        <p class="sidebar-title">Originals</p>
+      <div class="sidebar-link">
+        <img src="icons/originals.svg" />
+        <p>Originals</p>
       </div>
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/youtube-music.svg" />
-        <p class="sidebar-title">YouTube Music</p>
+      <div class="sidebar-link">
+        <img src="icons/youtube-music.svg" />
+        <p>YouTube Music</p>
       </div>
-      <div class="sidebar-container">
-        <img class="sidebar-icon" src="icons/library.svg" />
-        <p class="sidebar-title">Library</p>
+      <div class="sidebar-link">
+        <img src="icons/library.svg" />
+        <p>Library</p>
       </div>
     </div>
 
+    <!--Section for video thumbnail, information, and channel profile picture-->
+    <!--First video container-->
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
@@ -82,6 +104,7 @@
             src="images/thumbnail-1.webp"
             alt="thumbnail-image"
           />
+          <div class="video-time">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -100,7 +123,7 @@
           </div>
         </div>
       </div>
-
+      <!--Second video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
           <img
@@ -108,6 +131,7 @@
             src="images/thumbnail-2.webp"
             alt="thumbnail-image"
           />
+          <div class="video-time">8:22</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -124,7 +148,7 @@
           </div>
         </div>
       </div>
-
+      <!--Third video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
           <img
@@ -132,6 +156,7 @@
             src="images/thumbnail-3.webp"
             alt="thumbnail-image"
           />
+          <div class="video-time">9:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -150,7 +175,7 @@
           </div>
         </div>
       </div>
-
+      <!--Fourth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
           <img
@@ -158,6 +183,7 @@
             src="images/thumbnail-4.webp"
             alt="thumbnail-image"
           />
+          <div class="video-time">22:09</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -176,7 +202,7 @@
           </div>
         </div>
       </div>
-
+      <!--Fifth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
           <img
@@ -184,6 +210,7 @@
             src="images/thumbnail-5.webp"
             alt="thumbnail-image"
           />
+          <div class="video-time">11:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -202,7 +229,7 @@
           </div>
         </div>
       </div>
-
+      <!--Sixth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
           <img
@@ -210,6 +237,8 @@
             src="images/thumbnail-6.webp"
             alt="thumbnail-image"
           />
+
+          <div class="video-time">19:59</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
