Added corresponding link to following items:     - Video Thumbnail     - Channel picture     - Video Author

--- a/youtube.html
+++ b/youtube.html
@@ -19,7 +19,9 @@
       <div class="left-section">
         <div>
           <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="/" />
-          <img class="youtube-logo" src="icons/youtube-logo.svg" />
+          <a href="https://www.youtube.com/">
+            <img class="youtube-logo" src="icons/youtube-logo.svg" />
+          </a>
         </div>
       </div>
       <div class="middle-section">
@@ -99,26 +101,34 @@
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-1.webp"
-            alt="thumbnail-image"
-          />
-          <div class="video-time">14:20</div>
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <img
+              class="thumbnail"
+              src="images/thumbnail-1.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">14:20</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-1.jpeg"
-              alt="profile-picture"
-            />
+            <a href="https://www.youtube.com/@mkbhd">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-1.jpeg"
+                alt="profile-picture"
+              />
+            </a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Talking Tech and AI with Google CEO Sundar Pichai!
+              <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                Talking Tech and AI with Google CEO Sundar Pichai!
+              </a>
             </p>
-            <p class="video-author">Marques Brownlee</p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@mkbhd"> Marques Brownlee </a>
+            </p>
             <p class="video-stats">3.4M views &#183; 6 months ago</p>
           </div>
         </div>
@@ -126,24 +136,38 @@
       <!--Second video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-2.webp"
-            alt="thumbnail-image"
-          />
-          <div class="video-time">8:22</div>
+          <a
+            href="https://www.youtube.com/watch?v=mP0RAo9SKZk&pp=ygUddHJ5IG5vdCB0byBsYXVnaCBjaGFsbGVuZ2UgIzk%3D"
+          >
+            <img
+              class="thumbnail"
+              src="images/thumbnail-2.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">8:22</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-2.jpeg"
-              alt="channel-image"
-            />
+            <a href="https://www.youtube.com/@markiplier">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-2.jpeg"
+                alt="channel-image"
+              />
+            </a>
           </div>
           <div class="video-info">
-            <p class="video-title">Try Not To Laugh Challenge #9</p>
-            <p class="video-author">Markipiler</p>
+            <p class="video-title">
+              <a
+                href="https://www.youtube.com/watch?v=mP0RAo9SKZk&pp=ygUddHJ5IG5vdCB0byBsYXVnaCBjaGFsbGVuZ2UgIzk%3D"
+              >
+                Try Not To Laugh Challenge #9
+              </a>
+            </p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@markiplier"> Markipiler </a>
+            </p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
         </div>
@@ -151,26 +175,38 @@
       <!--Third video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-3.webp"
-            alt="thumbnail-image"
-          />
-          <div class="video-time">9:13</div>
+          <a
+            href="https://www.youtube.com/watch?v=FgjPQQeTh1w&pp=ygUrY3JhenkgdGlrdG9rcyB0YWtlbiBtb21lbnRzIGJlZm9yZSBkaXNhc3Rlcg%3D%3D"
+          >
+            <img
+              class="thumbnail"
+              src="images/thumbnail-3.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">9:13</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-3.jpeg"
-              alt="profile-picture"
-            />
+            <a href="https://www.youtube.com/@SSSniperWolf">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-3.jpeg"
+                alt="profile-picture"
+              />
+            </a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Crazy Tik Toks Taken Moments Before DISASTER
+              <a
+                href="https://www.youtube.com/watch?v=FgjPQQeTh1w&pp=ygUrY3JhenkgdGlrdG9rcyB0YWtlbiBtb21lbnRzIGJlZm9yZSBkaXNhc3Rlcg%3D%3D"
+              >
+                Crazy Tik Toks Taken Moments Before DISASTER
+              </a>
             </p>
-            <p class="video-author">SSSniperWold</p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@SSSniperWolf"> SSSniperWold </a>
+            </p>
             <p class="video-stats">12M views &#183; 1 year ago</p>
           </div>
         </div>
@@ -178,26 +214,38 @@
       <!--Fourth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-4.webp"
-            alt="thumbnail-image"
-          />
-          <div class="video-time">22:09</div>
+          <a
+            href="https://www.youtube.com/watch?v=094y1Z2wpJg&pp=ygU_VGhlIFNpbXBsZXN0IE1hdGggUHJvYmxlbSBObyBPbmUgQ2FuIFNvbHZlIC0gQ29sbGF0eiBDb25qZWN0dXJl"
+          >
+            <img
+              class="thumbnail"
+              src="images/thumbnail-4.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">22:09</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-4.jpeg"
-              alt="channel-image"
-            />
+            <a href="https://www.youtube.com/@veritasium">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-4.jpeg"
+                alt="channel-image"
+              />
+            </a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              <a
+                href="https://www.youtube.com/watch?v=094y1Z2wpJg&pp=ygU_VGhlIFNpbXBsZXN0IE1hdGggUHJvYmxlbSBObyBPbmUgQ2FuIFNvbHZlIC0gQ29sbGF0eiBDb25qZWN0dXJl"
+              >
+                The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              </a>
             </p>
-            <p class="video-author">Veritasium</p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@veritasium"> Veritasium </a>
+            </p>
             <p class="video-stats">18M views &#183; 4 months ago</p>
           </div>
         </div>
@@ -205,26 +253,38 @@
       <!--Fifth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-5.webp"
-            alt="thumbnail-image"
-          />
-          <div class="video-time">11:17</div>
+          <a
+            href="https://www.youtube.com/watch?v=86CQq3pKSUw&pp=ygUzIEthZGFuZSdzIEFsZ29yaXRobSB0byBNYXhpbXVtIFN1bSBTdWJhcnJheSBQcm9ibGVt"
+          >
+            <img
+              class="thumbnail"
+              src="images/thumbnail-5.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">11:17</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-5.jpeg"
-              alt="profile-picture"
-            />
+            <a href="https://www.youtube.com/@CSDojo">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-5.jpeg"
+                alt="profile-picture"
+              />
+            </a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
+              <a
+                href="https://www.youtube.com/watch?v=86CQq3pKSUw&pp=ygUzIEthZGFuZSdzIEFsZ29yaXRobSB0byBNYXhpbXVtIFN1bSBTdWJhcnJheSBQcm9ibGVt"
+              >
+                Kadane's Algorithm to Maximum Sum Subarray Problem
+              </a>
             </p>
-            <p class="video-author">CS Dojo</p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@CSDojo"> CS Dojo </a>
+            </p>
             <p class="video-stats">519K views &#183; 5 years ago</p>
           </div>
         </div>
@@ -232,27 +292,38 @@
       <!--Sixth video container-->
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="images/thumbnail-6.webp"
-            alt="thumbnail-image"
-          />
-
-          <div class="video-time">19:59</div>
+          <a
+            href="https://www.youtube.com/watch?v=yXWw0_UfSFg&pp=ygUwIEFueXRoaW5nIFlvdSBDYW4gRml0IEluIFRoZSBDaXJjbGUgSSdsbCBQYXkgRm9y"
+          >
+            <img
+              class="thumbnail"
+              src="images/thumbnail-6.webp"
+              alt="thumbnail-image"
+            />
+            <div class="video-time">19:59</div>
+          </a>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img
-              class="profile-picture"
-              src="channel-pictures/channel-6.jpeg"
-              alt="channel-image"
-            />
+            <a href="https://www.youtube.com/@MrBeast">
+              <img
+                class="profile-picture"
+                src="channel-pictures/channel-6.jpeg"
+                alt="channel-image"
+              />
+            </a>
           </div>
           <div class="video-info">
             <p class="video-title">
-              Anything You Can Fit In The Circle I'll Pay For
+              <a
+                href="https://www.youtube.com/watch?v=yXWw0_UfSFg&pp=ygUwIEFueXRoaW5nIFlvdSBDYW4gRml0IEluIFRoZSBDaXJjbGUgSSdsbCBQYXkgRm9y"
+              >
+                Anything You Can Fit In The Circle I'll Pay For
+              </a>
             </p>
-            <p class="video-author">Mr. Beast</p>
+            <p class="video-author">
+              <a href="https://www.youtube.com/@MrBeast"> Mr. Beast </a>
+            </p>
             <p class="video-stats">141M views &#183; 1 year ago</p>
           </div>
         </div>
