Added tooltips to the channel's picture containers

--- a/youtube.html
+++ b/youtube.html
@@ -111,14 +111,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@mkbhd">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-1.jpeg"
-                alt="profile-picture"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@mkbhd">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-1.jpeg"
+                  alt="profile-picture"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-1.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">Marques Brownlee</p>
+                  <p class="channel-tooltip-subscribers">15M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -148,14 +163,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@markiplier">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-2.jpeg"
-                alt="channel-image"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@markiplier">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-2.jpeg"
+                  alt="channel-image"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-2.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">Markipiler</p>
+                  <p class="channel-tooltip-subscribers">36.8M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -187,14 +217,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@SSSniperWolf">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-3.jpeg"
-                alt="profile-picture"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@SSSniperWolf">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-3.jpeg"
+                  alt="profile-picture"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-3.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">SSSniperWolf</p>
+                  <p class="channel-tooltip-subscribers">34.5M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -226,14 +271,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@veritasium">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-4.jpeg"
-                alt="channel-image"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@veritasium">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-4.jpeg"
+                  alt="channel-image"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-4.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">Veritasium</p>
+                  <p class="channel-tooltip-subscribers">15.9M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -265,14 +325,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@CSDojo">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-5.jpeg"
-                alt="profile-picture"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@CSDojo">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-5.jpeg"
+                  alt="profile-picture"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-5.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">CS Dojo</p>
+                  <p class="channel-tooltip-subscribers">1.94M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -304,14 +379,29 @@
           </a>
         </div>
         <div class="video-info-grid">
-          <div class="channel-picture">
-            <a href="https://www.youtube.com/@MrBeast">
-              <img
-                class="profile-picture"
-                src="channel-pictures/channel-6.jpeg"
-                alt="channel-image"
-              />
-            </a>
+          <div class="channel-tooltip-container">
+            <div class="channel-picture">
+              <a href="https://www.youtube.com/@MrBeast">
+                <img
+                  class="profile-picture"
+                  src="channel-pictures/channel-6.jpeg"
+                  alt="channel-image"
+                />
+              </a>
+              <div class="channel-tooltip">
+                <div class="channel-tooltip-picture">
+                  <img
+                    class="profile-picture"
+                    src="channel-pictures/channel-6.jpeg"
+                    alt="profile-picture"
+                  />
+                </div>
+                <div class="channel-tooltip-info">
+                  <p class="channel-tooltip-author">MrBeast</p>
+                  <p class="channel-tooltip-subscribers">308M Subscribers</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -322,7 +412,7 @@
               </a>
             </p>
             <p class="video-author">
-              <a href="https://www.youtube.com/@MrBeast"> Mr. Beast </a>
+              <a href="https://www.youtube.com/@MrBeast"> MrBeast </a>
             </p>
             <p class="video-stats">141M views &#183; 1 year ago</p>
           </div>
